--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             </div>
             <div class="banner">
                 
-                <h1>Web Developer & Front End Designer</h1> 
+                <h1>Web Developer & Front End <br>
+                    Designer</h1> 
                 <p>Wesley Gomes</p>
                 <button>Saiba mais</button>
             </div>
