icones,botão hamburguer etc.

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                 </ul>
             </nav>
             <div class="social-media">
-                <a href="#"><i class="fab fa"></i></a>
-                <a href="#"><i class="fab fa"></i></a>
-                <a href="#"><i class="fab fa"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-github-square"></i></a>
+                <a href="#"><i class="fab fa-instagram-square"></i></a>
             </div>
         </div>
 
