--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="line" id="line1"></div>
             <div class="line" id="line2"></div>
             <div class="line" id="line3"></div>
+            <span>fechar</span>
         </div>
 
 
@@ -58,10 +59,8 @@
                 <a href="#"><i class="fab fa-instagram-square"></i></a>
             </div>
         </div>
-
-    </div>
-
-
+ </div>
 </body>
+<script src="script.js"></script>
 
 </html>
